--- a/BANHANG/asset/css/cart.css
+++ b/BANHANG/asset/css/cart.css
@@ -1,7 +1,7 @@
 body {
     font-family: Arial, sans-serif;
     margin: 0;
-    padding: 20px;
+    padding: 10px;
     background-color: #f5f5f5;
 }
 
@@ -69,6 +69,7 @@ label {
     font-weight: bold;
     display: block;
     margin: 10px 0 5px;
+    font-size: 1.4rem;
 }
 
 input {
@@ -104,3 +105,6 @@ input {
         width: 90%;
     }
 }
+
+
+
